--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "validator": "^10.4.0"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.5",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.12.0",
